--- a/017Imagens/fundo006.html
+++ b/017Imagens/fundo006.html
@@ -6,13 +6,27 @@
     <title>Posicionamento</title>
     <style>
         body {
-            height: 97vh;
-            background-image: url(imagens/wallpaper005.jpg);
-            background-position: top center;
+            height: 100hv;
+            background-color: rgb(17, 17, 17);
+            background-image: url(imagens/wallpaper002.jpg);
+            background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        main {
+            width: 500px;
+            margin: auto;
+            padding: 10px;
+            background-color: white;
+            border-radius: 15px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.493);
         }
     </style>
 </head>
 <body>
-    
+    <main>
+        <h1>Posicionamento Background-Image</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, natus! Quam adipisci, unde perspiciatis culpa facere et eum temporibus doloremque eligendi! Beatae provident pariatur modi maxime deserunt voluptates quas dolore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo vitae provident voluptatem harum velit nam nostrum, commodi consequuntur quam fuga eos voluptates, quisquam nulla ullam, ipsa obcaecati sit esse ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem quasi nobis incidunt fugit dolor, voluptatum aperiam sit accusamus repellendus officia dolorem cum deserunt hic quos porro itaque qui vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iusto adipisci esse doloribus et odio praesentium itaque nulla natus optio tempore, aliquam, voluptates molestiae. A saepe non facere ullam possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, aut sint suscipit, laborum necessitatibus nisi nostrum, quo facere vitae officia repellendus quis? A similique, aperiam quod cumque tempora facere molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque impedit odit tenetur ducimus nostrum repellat non ullam rem illum quibusdam debitis nisi reiciendis a esse, necessitatibus alias placeat natus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dignissimos quis cum blanditiis repellat, doloremque laudantium eligendi est ducimus, distinctio aliquam necessitatibus porro nulla libero. Magni assumenda placeat alias aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, natus! Quam adipisci, unde perspiciatis culpa facere et eum temporibus doloremque eligendi! Beatae provident pariatur modi maxime deserunt voluptates quas dolore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo vitae provident voluptatem harum velit nam nostrum, commodi consequuntur quam fuga eos voluptates, quisquam nulla ullam, ipsa obcaecati sit esse ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem quasi nobis incidunt fugit dolor, voluptatum aperiam sit accusamus repellendus officia dolorem cum deserunt hic quos porro itaque qui vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iusto adipisci esse doloribus et odio praesentium itaque nulla natus optio tempore, aliquam, voluptates molestiae. A saepe non facere ullam possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, aut sint suscipit, laborum necessitatibus nisi nostrum, quo facere vitae officia repellendus quis? A similique, aperiam quod cumque tempora facere molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque impedit odit tenetur ducimus nostrum repellat non ullam rem illum quibusdam debitis nisi reiciendis a esse, necessitatibus alias placeat natus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dignissimos quis cum blanditiis repellat, doloremque laudantium eligendi est ducimus, distinctio aliquam necessitatibus porro nulla libero. Magni assumenda placeat alias aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, natus! Quam adipisci, unde perspiciatis culpa facere et eum temporibus doloremque eligendi! Beatae provident pariatur modi maxime deserunt voluptates quas dolore. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo vitae provident voluptatem harum velit nam nostrum, commodi consequuntur quam fuga eos voluptates, quisquam nulla ullam, ipsa obcaecati sit esse ea. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti rem quasi nobis incidunt fugit dolor, voluptatum aperiam sit accusamus repellendus officia dolorem cum deserunt hic quos porro itaque qui vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem iusto adipisci esse doloribus et odio praesentium itaque nulla natus optio tempore, aliquam, voluptates molestiae. A saepe non facere ullam possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, aut sint suscipit, laborum necessitatibus nisi nostrum, quo facere vitae officia repellendus quis? A similique, aperiam quod cumque tempora facere molestias. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque impedit odit tenetur ducimus nostrum repellat non ullam rem illum quibusdam debitis nisi reiciendis a esse, necessitatibus alias placeat natus explicabo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit dignissimos quis cum blanditiis repellat, doloremque laudantium eligendi est ducimus, distinctio aliquam necessitatibus porro nulla libero. Magni assumenda placeat alias aliquam!</p>
+    </main>
 </body>
 </html>
