Anatomia das Tabelas

--- a/019Tabelas/003.html
+++ b/019Tabelas/003.html
@@ -11,7 +11,7 @@
     <table>
         <thead>
             <th>Estado</th>
-            <th>População</th>
+            <th style="width:90px;">População</th>
         </thead>
         <tbody>
             <tr>
@@ -37,7 +37,7 @@
         </tbody>
         <tfoot>
             <th>Total de Habitantes</th>
-            <th class="numero">212 583 750</th>
+            <th class="numero">111 190 742</th>
         </tfoot>
     </table>
     <p>Assim como na estrutura HTML, nas tabelas também temos divisões semânticas. Podemos usar as 3 tags ("<strong>&lt;thead&gt;</strong>", "<strong>&lt;tbody&gt;</strong>" e "<strong>&lt;tfoot&gt;</strong>") para organizar a estrutura da nossa tabela.</p>
