--- a/028Formularios/03.html
+++ b/028Formularios/03.html
@@ -22,13 +22,14 @@
         </section>
         <section id="perguntaIdade">
             <label for="idade">Sua idade: </label>
-            <input type="number" id="idade" placeholder="Digite sua idade" required maxlength="3" size="15">
+            <input type="number" id="idade" placeholder="Digite sua idade" required max="199" size="15">
         </section>
         <section id="perguntaSexo">
             <label for="sexo">Seu sexo: </label>
             <input type="text" id="sexo" placeholder="Digite seu sexo" required minlength="3" maxlength="20" size="20">
         </section>
         <input type="submit" value="Enviar">
+        <input type="reset" value="Limpar">
     </form>
 </body>
 </html>
